--- a/index.html
+++ b/index.html
@@ -38,6 +38,38 @@
     <!-- Your Code Here -->
     <!-- You should start doing handlebar stuff here -->
     <!-- Your Code Here -->
+    <script id="results-template" type="text/x-handlebars-template">
+        {{#each apartments}}
+            <div class="result">
+                <img src={{img}}>
+                <div class="l-addr">Address: </div>
+                <div class="address">{{address}}</div>
+                <div class="l-price">Price: </div>
+                <div class="price">{{formatCurrency price}}</div>
+                <div class="l-rooms">Rooms: </div>
+                <div class="rooms">{{rooms}}</div>
+                {{#if parking}}
+                    <div class="l-park">Parking availabe</div>
+                    <img src="./square-parking-solid.svg" class="parking">
+                {{/if}}
+                {{#if immediate}}
+                    <div class="l-immediate">Contact: </div>
+                    <div class="immediate">Name: {{contactDetails.name}}, <br>email: {{contactDetails.email}}</div>
+                {{/if}}
+                {{#if features}}
+                <div class="l-features">Features: </div>
+                <ul class="features">
+                    {{#each features}}
+                        <li>{{this}}</li>
+                    {{/each}}
+                {{/if}}
+                </ul>
+            </div>
+        {{/each}}
+        {{#unless apartments}}
+            <div class="no-match">No results</div>
+        {{/unless}}
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
